# OOP

./: CMakeLists.txt  README.md
Prakt_1/: CMakeLists.txt  main.cpp
Prakt_10/: main.cpp
Prakt_11/: main.cpp
Prakt_12/: main.cpp
Prakt_13/: main.cpp
Prakt_2/: TeaMachine.h
Prakt_3/: main.cpp
Prakt_4/: main.cpp
Prakt_5/: main.cpp
Prakt_6/: main.cpp
Prakt_7/: main.cpp
Prakt_8/: main.cpp
Prakt_9/: main.cpp
