cmake_minimum_required(VERSION 3.28)
project(OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP
       #[[ Prakt_1/main.cpp]]
       #[[ Prakt_3/main.cpp]]
#        Prakt_4/main.cpp
#        Prakt_6/main.cpp
#        Prakt_7/main.cpp
#        Prakt_8/main.cpp
        Prakt_9/main.cpp
        #        Prakt_5/main.cpp
        #        Prakt_2/TeaMachine.h
)
